Fix center for footer on firefox

--- a/sites/pinnacle.com/themes/pinnacle/scss/pinnacle_style.scss
+++ b/sites/pinnacle.com/themes/pinnacle/scss/pinnacle_style.scss
@@ -169,6 +169,7 @@
 		.view-content {
 			@include display-flex;
 			@include flex-direction(row);
+			@include justify-content(center);
 		}	
 
 		.views-row {
